# dev-diaries

./: .gitignore  Cargo.toml  Makefile  README.md  nginx.conf
backend/: Cargo.toml
backend/src/: app.rs  auth.rs  db.rs  error.rs  errors.rs  lib.rs  main.rs  middleware.rs  mw_auth.rs  password_recovery.rs
backend/src/app/: auth.rs  db.rs  errors.rs  mod.rs  password_recovery.rs
backend/src/app/model/: mod.rs  user.rs
backend/src/app/repository/: mod.rs
backend/src/app/repository/user_repository/: mod.rs  pg_user_repository.rs
backend/src/app/routes/: mod.rs  users.rs
backend/src/app/service/: user_service.rs
backend/src/model/: diary.rs  mod.rs
backend/src/models/: diary.rs  leet_code.rs  mod.rs  user.rs
backend/src/repository/: mod.rs
backend/src/repository/diary_repository/: mod.rs  pg_diary_repository.rs
backend/src/repository/diary_repository/pg_diary_repository/: mod.rs  models.rs
backend/src/repository/leet_code_repository/: http_leet_code_repository.rs  mod.rs
backend/src/repository/token_repository/: mem_token_repository.rs  mod.rs
backend/src/repository/user_repository/: mod.rs  pg_user_repository.rs
backend/src/routes/: diary.rs  leet_code.rs  mod.rs  users.rs
backend/src/service/: diary_service.rs  leet_code_service.rs  mod.rs  user_service.rs
backend/tests/: quick_dev.rs
db/: coc-settings.json  ddl.sql  docker-compose.yml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/bak/: leetcode_form_controlled.rs
frontend/src/: app.rs  lib.rs  main.rs  storage.rs  utils.rs
frontend/src/api/: diary.rs
frontend/src/components/: alert.rs  diary_form.rs  dynamic_form.rs  leetcode_form.rs  markdown_input.rs  mod.rs  navbar.rs
frontend/src/components/form_items/: job_application.rs  leetcode.rs  mod.rs
frontend/src/hooks/: auth.rs
frontend/src/pages/: create.rs  diaries.rs  home.rs  login.rs  mod.rs  register.rs  today.rs
frontend/src/wrappers/: auth.rs  layout.rs  mod.rs
scripts/: start_dev.sh  stop_dev.sh
