[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
ring = "0.17.6"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["cors"] }
url = "2.5.0"

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.7"
