[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = { git = "https://github.com/Keats/jsonwebtoken" }
leptos = { version = "0.5.2", features = ["csr"] }
leptos_router = { version = "0.5.2", features = ["csr"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.65", features = ["Storage"] }

