[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
leptos = { version = "0.5.2", features = ["csr"] }
leptos_router = { version = "0.5.2", features = ["csr"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.108"
thiserror = "1.0.50"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.65", features = ["Storage"] }

